2003-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Use rtems-bugs@rtems.com as bug report email address.

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AM_INIT_AUTOMAKE([1.7.2]).

2003-02-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: AC_PREREQ(2.57).

2003-02-07	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* i386-cygwin-gcc.spec.in: Use %_prefix instead of %prefix.
	Add gnatlib.
	Add %defattr(-,root,root).
	Provide virtual packages i386-cygwin-[c++|g++|gnat].

2003-01-28	Joel Sherrill <joel@OARcorp.com>

	* .cvsignore: Add entries to .cvsignore.

2003-01-27	Joel Sherrill <joel@OARcorp.com>

	* i386-cygwin-gcc.spec.in, setup.def: Enabled building of GNAT for
	revision 2.

2003-01-27	Joel Sherrill <joel@OARcorp.com>

	* i386-cygwin-gcc.spec.in, i386-cygwin-mingw.spec.in, setup.def:
	Updated to current Cygwin versions and fixed some minor nits in
	the specifications.

2003-01-16	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* setup.def: Update to binutils-20021117-1.
	* i386-cygwin-binutils.spec.in: Reflect update to binutils-20021127-1.
	Adaptations to RH-8.0/rpm-4.1.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* Makefile.am: Remove AUTOMAKE_OPTIONS.

2001-02-05	Joel Sherrill <joel@OARcorp.com>

	* i386-cygwin-libs.spec.in, i386-cygwin-mingw.spec.in,
	i386-cygwin-w32api.spec.in: Modified group.

2001-01-22	Joel Sherrill <joel@OARcorp.com>

	* i386-cygwin-binutils.spec.in, i386-cygwin-gcc.spec.in,
	i386-cygwin-libs.spec.in, i386-cygwin-mingw.spec.in,
	i386-cygwin-w32api.spec.in, setup.def: Updated to reflect latest
	versions and packaging.

2001-10-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Add autom4te.cache for autoconf > 2.52.
	* configure.in: Remove.