@@ -2,13 +2,8 @@
 ## $Id$
 ##
 
-
-RPM_SPECS_DATA = \
-    i386-cygwin-binutils.spec \
-    i386-cygwin-libs.spec \
-    i386-cygwin-mingw.spec \
-    i386-cygwin-w32api.spec \
-    i386-cygwin-gcc.spec
+RPM_SPECS_DATA = i386-cygwin-binutils.spec i386-cygwin-libs.spec \
+    i386-cygwin-mingw.spec i386-cygwin-w32api.spec i386-cygwin-gcc.spec
 
 CONFIGURE_DEPENDENCIES = setup.cache
 setup.cache: setup.def
