@@ -1,3 +1,7 @@
+2003-12-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>
+
+	* Makefile.am: Cosmetics.
+
 2003-12-11	Joel Sherrill <joel@OARcorp.com>
 
 	PR 540/rtems_misc
